# Hackathon

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: app.py  db.py  main.py
db/: init.sql
