[project]
name = "ai-sql-agent"
version = "0.1.0"
description = "AI Agent for SQL generation"
requires-python = ">=3.12"

dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "openai>=1.30.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "black",
    "ruff",
]